# verifactu-python-sdk

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_chain.py  test_hash.py  test_models.py  test_qr.py  test_xml_builder.py
verifactu/: __init__.py  chain.py  client.py  config.py  exceptions.py  hash.py  qr.py
verifactu/models/: __init__.py  breakdown.py  cancellation.py  enums.py  header.py  identifiers.py  invoice.py  query.py  response.py  system.py
verifactu/xml/: builder.py  namespaces.py  parser.py
