[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifactu"
version = "0.1.1"
description = "Unofficial Python SDK for AEAT's Verifactu electronic invoicing system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jalvarezz13" },
]
keywords = ["verifactu", "aeat", "spain", "tax", "invoicing", "factura"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "lxml>=5.0",
    "requests>=2.28",
    "cryptography>=41.0",
]

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "lxml-stubs",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["verifactu"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
